iss #5: init and save game model on game launch